Added styling to font

--- a/css/custom-font-codes.css
+++ b/css/custom-font-codes.css
@@ -1,5 +1,3 @@
 
-.icon-cloud-sun:before { content: '\e800'; } /* '' */
-.icon-arrow:before { content: '\e805'; } /* '' */
-.icon-heart:before { content: '\e806'; } /* '' */
-.icon-lemon:before { content: '\e807'; } /* '' */
+.icon-flower:before { content: '\e800'; } /* '' */
+.icon-leaf:before { content: '\e801'; } /* '' */
