--- a/css/custom-font.css
+++ b/css/custom-font.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'custom-font';
-  src: url('../fonts/custom-font.eot');
-  src: url('../fonts/custom-font.eot') format('embedded-opentype'),
-       url('../fonts/custom-font.woff') format('woff'),
-       url('../fonts/custom-font.ttf') format('truetype'),
-       url('../fonts/custom-font.svg') format('svg');
+  src: url('../fonts/custom-font.eot?91468458');
+  src: url('../fonts/custom-font.eot?91468458#iefix') format('embedded-opentype'),
+       url('../fonts/custom-font.woff?91468458') format('woff'),
+       url('../fonts/custom-font.ttf?91468458') format('truetype'),
+       url('../fonts/custom-font.svg?91468458#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?40077016#fontello') format('svg');
+    src: url('../font/fontello.svg?91468458#fontello') format('svg');
   }
 }
 */
@@ -50,7 +50,5 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-cloud-sun:before { content: '\e800'; } /* '' */
-.icon-arrow:before { content: '\e805'; } /* '' */
-.icon-heart:before { content: '\e806'; } /* '' */
-.icon-lemon:before { content: '\e807'; } /* '' */
+.icon-flower:before { content: '\e800'; } /* '' */
+.icon-leaf:before { content: '\e801'; } /* '' */
