--- a/css/index.css
+++ b/css/index.css
@@ -19,8 +19,9 @@ body  {
 
 
 .main-content {
-  width: 500px;
-  height: 500px;
+   margin: 0 auto;
+   width: 400px; 
+   margin-top: 200px;
 }
 
 
